MDEV-28127 EXCHANGE PARTITION with non-matching vcol expression segfault

mysql_compare_tables() treated all columns non-virtual. Now it
properly checks if the columns are virtual and matches expressions.